# FFmpegTutorial

./: .gitignore  README.md
ffmpeg_sdk_tutorial/: CMakeLists.txt  main.cpp
ffmpeg_sdk_tutorial/inc/: io_data.h  video_decoder_core.h  video_encoder_core.h
ffmpeg_sdk_tutorial/src/: io_data.cpp
ffmpeg_sdk_tutorial/src/audio_decoder/: audio_decoder.cpp  audio_decoder_core.cpp
ffmpeg_sdk_tutorial/src/audio_encoder/: audio_encoder.cpp  audio_encoder_core.cpp
ffmpeg_sdk_tutorial/src/audio_resampler/: audio_resampler.cpp  audio_resampler_core.cpp
ffmpeg_sdk_tutorial/src/demuxer/: demuxer.cpp  demuxer_core.cpp
ffmpeg_sdk_tutorial/src/muxer/: muxer.cpp  muxer_core.cpp
ffmpeg_sdk_tutorial/src/video_decoder/: video_decoder.cpp  video_decoder_core.cpp
ffmpeg_sdk_tutorial/src/video_encoder/: video_encoder.cpp  video_encoder_core.cpp
ffmpeg_sdk_tutorial/src/video_transformer/: video_swscale_core.cpp  video_transformer.cpp
sffplay/: CMakeLists.txt  README.md  SimplePlayer.c  example_44100_s16le_ac2.pcm  ffplay.c  ref_SimplePlayer.c  ref_ffplay_n601.c  sdl_play_pcm.cpp  sffplay.cpp  sffplay_v1.cpp  sffplay_v2.cpp  sffplay_yuv.cpp  showImageWithSDL.cpp
